@@ -1,3 +1,7 @@
+2010-06-09  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14677: htmlArea RTE: Toolbar state incorect in the absence of block element
+
 2010-06-09  Steffen Kamper  <info@sk-typo3.de>
 
 	* Fixed bug #14674: Replace calls to t3lib_extMgm:: within t3lib_extMgm to self:: due to performance reasons (Thanks to Sebastian Michaelsen)
